--- a/resources/css/plugin_style.css
+++ b/resources/css/plugin_style.css
@@ -4,10 +4,13 @@ html, body {
   color: #444444;
 };
 .noselect {
-  -khtml-user-select: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                 not supported by any browser */
 }
 
 #no_mistakes {
